fix: theme btn alignment

--- a/main.css
+++ b/main.css
@@ -86,6 +86,7 @@ header {
   font-size: 0.7em;
   border-radius: 0.2rem;
   text-align: center;
+  margin-bottom: 8px;
   background-color: var(--main-color);
 }
 
@@ -99,9 +100,10 @@ header {
   width: auto;
   height: auto;
   border: 1px solid rgb(150, 180, 220);
-  border-radius: 5px;
-  padding: 5px 10px;
-  margin: 10px 0px 0px 10px;
+  border-radius: 4px;
+  padding: 4px 8px;
+  margin: 0px 0px 0px 8px;
+  align-self: start;
   display: inline-block;
   box-shadow: rgba(0, 50, 100, 0.2) 0px 2px 4px;
   font-weight: 600;
@@ -303,7 +305,7 @@ main {
   margin: 0.5rem 0 0.1rem 0;
 }
 
-.project nav > :nth-child(2) {
+.project nav> :nth-child(2) {
   margin: 0 0.5rem;
 }
 
@@ -504,6 +506,7 @@ footer {
 }
 
 @keyframes blob-one {
+
   0%,
   100% {
     transform: translatey(0);
@@ -515,6 +518,7 @@ footer {
 }
 
 @keyframes blob-two {
+
   0%,
   100% {
     transform: translatey(0);
@@ -526,6 +530,7 @@ footer {
 }
 
 @keyframes blob-three {
+
   0%,
   100% {
     transform: translatey(0);
@@ -537,6 +542,7 @@ footer {
 }
 
 @keyframes blob-four {
+
   0%,
   100% {
     transform: translatey(0);
@@ -548,6 +554,7 @@ footer {
 }
 
 @keyframes blob-five {
+
   0%,
   100% {
     transform: translatey(0);
@@ -559,6 +566,7 @@ footer {
 }
 
 @keyframes blob-six {
+
   0%,
   100% {
     transform: translatey(0);
@@ -570,6 +578,7 @@ footer {
 }
 
 @keyframes blob-seven {
+
   0%,
   100% {
     transform: translatey(0);
